--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Dia 1: Chegada em Miami e Viagem para Orlando -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=Estrada+para+Orlando" alt="Imagem da estrada para Orlando" class="card-image w-full rounded-lg mb-4">
+                    <img src="orlando.png" alt="Imagem da estrada para Orlando" class="card-image w-full rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 1: Chegada em Miami e Viagem para Orlando (08/03)</h3>
                     <p class="text-sm text-gray-600 mb-4">Chegada no Aeroporto Internacional de Miami (MIA), retirada do carro alugado e viagem de carro para Orlando. Check-in no hotel e jantar para descansar.</p>
                     <p class="font-semibold">Endereço (MIA):</p>
@@ -77,18 +77,19 @@
 
                 <!-- Dia 2: Magic Kingdom -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=Magic+Kingdom" alt="Imagem do Castelo da Cinderela no Magic Kingdom" class="card-image w-full rounded-lg mb-4">
+                    <img src="MK.png" alt="Imagem do Castelo da Cinderela no Magic Kingdom" class="card-image w-full rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 2: Magic Kingdom (09/03)</h3>
                     <p class="text-sm text-gray-600 mb-4">Dia inteiro no parque mais mágico da Disney. Não perca o show de fogos!</p>
                     <p class="font-semibold">Endereço:</p>
                     <p class="text-sm text-gray-500">1180 Seven Seas Dr, Lake Buena Vista, FL 32830</p>
                     <p class="font-semibold mt-2">Dica:</p>
                     <p class="text-sm text-gray-500">Use o app da Disney para Genie+ e tempo de espera.</p>
+                    <img src="RBRQ.png" alt="Ícone HB" width="90" height="103">
                 </div>
 
                 <!-- Dia 3: Compras e Churrasco -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=Compras+e+Walmart" alt="Imagem de um carrinho de compras em um supermercado" class="card-image w-full rounded-lg mb-4">
+                    <img src="walmart.png" alt="Imagem de um carrinho de compras em um supermercado" class="card-image w-full rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 3: Compras e Churrasco (10/03)</h3>
                     <p class="text-sm text-gray-600 mb-4">Compras de mercado para o churrasco no Walmart e depois outlet.</p>
                     <p class="font-semibold">Walmart Supercenter:</p>
@@ -99,7 +100,7 @@
                 
                 <!-- Dia 4: Universal Studios Florida -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=Universal+Studios" alt="Imagem do globo da Universal Studios" class="card-image w-full rounded-lg mb-4">
+                    <img src="Universal.png" alt="Imagem do globo da Universal Studios" class="card-image w-full rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 4: Universal Studios Florida (11/03)</h3>
                     <p class="text-sm text-gray-600 mb-4">Mergulhe no mundo do cinema com atrações de Harry Potter, Minions e mais.</p>
                     <p class="font-semibold">Endereço:</p>
@@ -110,7 +111,7 @@
 
                 <!-- Dia 5: Descanso e Compras -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=The+Florida+Mall" alt="Imagem de um shopping center" class="card-image w-full rounded-lg mb-4">
+                    <img src="thefloridamall.png" alt="Imagem de um shopping center" class="card-image w-full rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 5: Descanso e Compras (12/03)</h3>
                     <p class="text-sm text-gray-600 mb-4">Dia mais tranquilo para compras e explorar a cidade. Visite Winter Park e The Florida Mall.</p>
                     <p class="font-semibold">The Florida Mall:</p>
@@ -161,20 +162,22 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Dia 9: South Beach -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=South+Beach" alt="Imagem de South Beach" class="card-image w-full rounded-lg mb-4">
+                    <img src="southbeach.png" alt="Imagem de South Beach" class="card-image w-full rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 9: South Beach (16/03)</h3>
                     <p class="text-sm text-gray-600 mb-4">Passeio pela Ocean Drive e relaxamento em South Beach. Compras na Lincoln Road.</p>
                     <p class="font-semibold">Restaurante:</p>
                     <p class="text-sm text-gray-500">Joe's Stone Crab, 11 Washington Ave, Miami Beach, FL 33139</p>
                 </div>
 
-                <!-- Dia 10: Cultura e Arte -->
+               <!-- Dia 10: Viagem e Passeio em Key West -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    <img src="https://placehold.co/600x400/0071c2/ffffff?text=Wynwood+Walls" alt="Imagem de arte de rua em Wynwood Walls" class="card-image w-full rounded-lg mb-4">
-                    <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 10: Cultura e Arte (17/03)</h3>
-                    <p class="text-sm text-gray-600 mb-4">Explore a arte de rua em Wynwood Walls e a vibrante cultura cubana em Little Havana.</p>
-                    <p class="font-semibold">Wynwood Walls:</p>
-                    <p class="text-sm text-gray-500">2516 NW 2nd Ave, Miami, FL 33127</p>
+                    <img src="keywest.png" alt="Imagem de Key West" class="card-image w-full rounded-lg mb-4">
+                    <h3 class="text-xl font-bold text-indigo-600 mb-2">Dia 10: Viagem e Passeio em Key West (17/03)</h3>
+                    <p class="text-sm text-gray-600 mb-4">Dia de fazer uma viagem cênica pela Overseas Highway até Key West. Aproveite para caminhar pela Duval Street e visitar o Marco do Ponto Mais ao Sul dos EUA Continental.</p>
+                    <p class="font-semibold">Marco do Ponto Mais ao Sul:</p>
+                    <p class="text-sm text-gray-500">1400 Whitehead St, Key West, FL 33040</p>
+                    <p class="font-semibold mt-2">Dica:</p>
+                    <p class="text-sm text-gray-500">A viagem de carro de Miami para Key West leva aproximadamente 3h30-4h.</p>
                 </div>
 
                 <!-- Dia 11: Compras e Lazer -->
