--- a/index.html
+++ b/index.html
@@ -75,9 +75,6 @@
                     <p class="text-sm text-gray-500">A viagem de carro leva aproximadamente 3h30-4h.</p>
                 </div>
 
-                <!-- Dia 2: Magic Kingdom -->
-                <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
-                    
                   <!-- Dia 2: Magic Kingdom -->
                 <div class="bg-white rounded-2xl shadow-lg p-6 animate-up">
                   <img src="MK.png" alt="Imagem do Castelo da Cinderela no Magic Kingdom" class="card-image w-full rounded-lg mb-4">
@@ -104,6 +101,18 @@
                             </ol>
                         </div>
                     </details>
+                          <div class="mt-2 text-sm text-gray-600">
+                            <h4 class="font-bold text-gray-800 mb-1 flex items-center">
+                                Mapa do Parque (Clique para abrir)
+                                <!-- Adiciona o ícone de link externo -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                                </svg>
+                            </h4>
+                            <!-- Link para abrir a imagem em uma nova aba -->
+                            <a href="mapaMK.png" target="_blank" rel="noopener noreferrer">
+                                <img src="mapaMK.png" alt="Mapa detalhado do Magic Kingdom" class="w-full rounded-lg my-2 shadow-md cursor-pointer hover:shadow-xl transition-shadow duration-300">
+                            </a>
                 </div>
                     <img src="RBRQ.png" alt="Ícone HB" width="90" height="103">
                 </div>
