--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </svg>
                             </h4>
                             <!-- Link para abrir a imagem em uma nova aba -->
-                            <a href="mapaMK.png" target="_blank" rel="noopener noreferrer">
+                            <a href="MK_0725_PG_KM.pdf" target="_blank" rel="noopener noreferrer">
                                 <img src="mapaMK.png" alt="Mapa detalhado do Magic Kingdom" class="w-full rounded-lg my-2 shadow-md cursor-pointer hover:shadow-xl transition-shadow duration-300">
                             </a>
                 </div>
@@ -189,6 +189,19 @@
                             </ol>
                         </div>
                     </details>
+                      <div class="mt-2 text-sm text-gray-600">
+                            <h4 class="font-bold text-gray-800 mb-1 flex items-center">
+                                Mapa do Parque (Clique para abrir)
+                                <!-- Adiciona o ícone de link externo -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                                </svg>
+                            </h4>
+                            <!-- Link para abrir a imagem em uma nova aba -->
+                            <a href="DAK_0325_PG-KM.pdf" target="_blank" rel="noopener noreferrer">
+                                <img src="mapaAnimal.png" alt="Mapa detalhado do Magic Kingdom" class="w-full rounded-lg my-2 shadow-md cursor-pointer hover:shadow-xl transition-shadow duration-300">
+                            </a>
+                     </div>       
                 </div>
                 
                <!-- Dia 7: Conhecendo Orlando -->
